--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Web - Olá Mundo</h1>
     </header>
     <main class="main">
-        <section class="d-flex">
+        <section class="d-flex"> 
             <div class="piece">
                 <h2>Bloco 1</h2>
                 <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by <span> Cicero </span>are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
@@ -36,7 +36,7 @@
                 <h1>Formulário</h1>
                 <div>
                     <label for="nome">Nome: </label>
-                    <input name="nome" id="nome" type="text" required>
+                    <input name="nome" id="nome" type="text" required onchange="console.log('alteraram meu input')">
                 </div>
                 <div>
                     <label for="tipo">Tipo: </label>
@@ -50,10 +50,15 @@
                     <input type="submit">
                 </div>
             </form>
+            <div class="submits">
+                <ul>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
         <p>Web - Olá Mundo</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
